--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,15 @@ repository: "OpenHellion/openhellion.github.io"
 
 minimal_mistakes_skin: "dirt"
 
+include: ["_pages"]
+
 plugins:
   - jekyll-include-cache
 
 defaults:
   # _docs
   - scope:
-      path: "/docs/"
+      path: ""
       type: docs
     values:
       toc: true
@@ -20,3 +22,8 @@ defaults:
         - wide
       sidebar:
         nav: "docs"
+  - scope:
+    path: ""
+    type: pages
+  values:
+    layout: single
