--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 docs:
-  - title: Getting Started
+  - title: Overview
     children:
-      - title: "Quick-Start Guide"
-        url: /docs/quick-start-guide/
+      - title: "Docs"
+        url: /_docs/documentation.md
 
 main:
   - title: "Home"
