--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,9 @@ plugins:
   - jekyll-include-cache
 
 defaults:
-  # _docs
   - scope:
       path: ""
-      type: _docs
+      type: docs
     values:
       toc: true
       classes:
@@ -24,6 +23,6 @@ defaults:
         nav: "docs"
   - scope:
     path: ""
-    type: _pages
+    type: pages
   values:
     layout: single
