--- a/_config.yml
+++ b/_config.yml
@@ -7,23 +7,24 @@ repository: "OpenHellion/openhellion.github.io"
 minimal_mistakes_skin: "dirt"
 
 include: ["_pages", "_docs" ]
+encoding: "utf-8"
 
 plugins:
   - jekyll-include-cache
 
 defaults:
   - scope:
-      path: ""
-      type: docs
+      path: "_docs/"
+      type: "posts"
     values:
       toc: true
-      layout: posts
+      layout: "posts"
       classes:
         - wide
       sidebar:
         nav: "docs"
   - scope:
-      path: ""
-      type: pages
+      path: "_pages/"
+      type: "pages"
     values:
       layout: single
