--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ defaults:
       type: "posts"
     values:
       toc: true
-      layout: "posts"
+      layout: "docs"
       classes:
         - wide
       sidebar:
