--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ plugins:
 
 defaults:
   - scope:
-      path: "docmentation"
+      path: "documentation"
     values:
       toc: true
       layout: "posts"
