Added info on subsystems

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,8 @@ docs:
     children:
       - title: "Scene descriptions"
         url: "/documentation/scene-description"
+      - title: "Subsystems"
+        url: "/documentation/subsystems"
 
 # Top navigation.
 main:
